# vk-bot-repeat-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  RustConfig  vk-bot.service
src/: client.rs  config.rs  error.rs  init.rs  long_poll_client.rs  main.rs  mask_secret.rs  server_config.rs  worker.rs
src/server_config/: from_disk.rs  from_vk.rs  mod.rs
