[package]
name = "vk-bot-repeat-rust"
version = "0.1.0"
authors = ["vestild"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
simplelog = "^0.7"
log = "0.4"
reqwest = "0.10"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-threadpool = "0.1.15"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true