[package]
name = "vk-bot-repeat-rust"
version = "0.1.0"
authors = ["vestild"]
edition = "2018"

[dependencies]
simplelog = "^0.7"
log = "0.4"
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
simple-error = "0.2"
ctrlc = "3.1.3"
futures-intrusive = "0.2.2"
rand = "0.7.3"
env_logger = "0.7.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true