[package]
name = "vk-bot-repeat-rust"
version = "0.1.0"
authors = ["vestild"]
edition = "2018"

[dependencies]
simplelog = "^0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
simple-error = "0.2"
rand = "0.7.3"
env_logger = "0.7.1"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls", "gzip"] }

[profile.release]
lto = true

